[package]
name = "hills"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
dirs = "5.0.1"
garde = "0.16.3"
ipnet = { version = "2.9.0", features = ["serde"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
serde_yaml = "0.9.30"
toml = "0.8.8"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempdir = "0.3.7"
